# Generative_AI_Intermediate_Seminar

./: .gitignore  pyproject.toml
ai-agent-basics/examples/: agent_executor.py  main.py  re-act.py  skills-lock.json
ai-agent-basics/section-01-overview/: README.md
automation-with-ai-agents/: syllabus.md
automation-with-ai-agents/chapter-01-minutes/: instruction.md
automation-with-ai-agents/example01-minutes/: introduction.md
datasets/: README.md
datasets/text/: meeting_transcription_sample.md
development-ai-agents/examples/: re_act.py
dify-basics/section-01-introduction/: README.md
dify-basics/section-03-knowledge/: README.md
dify-basics/section-03-knowledge/assets/: slide.md
dify-basics/section-03-knowledge/assets/dummy-data/: company-news-2023.md  company-news-2024.md  employment-rules.md  faq-customer-support.md  meeting-notes-01.md  meeting-notes-02.md  product-manual.md
dify-basics/section-04-basic-agent/: README.md
dify-basics/section02-prompt/: README.md
mcp-basics/examples/: pyproject.toml
mcp-basics/examples/tools/jsonplaceholder/: __init__.py
